examples/inProgress/C/tests/shouldFail/twoGlobals.c
int x;
int x;
int main(void){
	return 0;
}
